--- a/recipes/style.css
+++ b/recipes/style.css
@@ -32,3 +32,9 @@ body {
     background-color:rgb(9, 85, 85);
     color:crimson
 }
+
+ol li {
+    color: red;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
